<resources>
    <string name="app_name">IoT-SmartParking</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="parking_location">Current Location</string>
    <string name="movement_state">State</string>
    <string name="start_detection_move">Update</string>
    <string name="stop_detection_move">Stop</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_parking">ParkingActivity</string>

    <string name="login_activity_title">GUC Smart Parking</string>
    <string name="login_activity_free_parking_spaces">Free Parking Spaces</string>
    <string name="login_activity_last_update">Last Updated: </string>
    <string name="login_activity_null_date"> 00:00:00</string>
    <string name="login_activity_null_car_entries">00</string>

</resources>
